Speedup config get, requires testing
